# Litf

./: CAPABILITIES.md  Cargo.toml  LIFT_PROJECT_REPORT.md  Lift_Design.md  Lift_Plan.md  README.md  STRATEGY.md
crates/lift-cli/src/: main.rs
crates/lift-config/src/: parser.rs
crates/lift-core/src/: lib.rs  model_builder.rs
crates/lift-export/src/: llvm.rs  qasm_export.rs
crates/lift-tests/: Cargo.toml
crates/lift-tests/src/: lib.rs
crates/lift-tests/tests/: test_ast_comprehensive.rs  test_benchmarks.rs  test_core_comprehensive.rs  test_integration_pipeline.rs  test_opt_comprehensive.rs  test_quantum_comprehensive.rs  test_tensor_comprehensive.rs
examples/: bert_base.lif  deepseek_v2_lite.lif  generate_models.rs  llama2_7b.lif  mistral_7b.lif  phi3_mini.lif  phi3_optimize.lith  validate_all.sh
lift-test/src/: config.rs
